# mcvoxel

./: .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  camera.cpp  camera.hpp  colour.hpp  datamodel.hpp  datamodel.tcc  io.cpp  io.hpp  io.tcc  main.cpp  octree.cpp  octree.hpp  octree.tcc  paths.tcc  sampling.cpp  sampling.hpp  scene.cpp  scene.hpp  scene.tcc  sky.cpp  sky.hpp  world.cpp  world.hpp
maps/: test_map.oct
mcvoxel/: CMakeLists.txt  camera.hpp  datamodel.hpp  io.cpp  io.hpp  io.tcc  octree.cpp  octree.hpp  paths.hpp  ray.hpp  sampling.cpp  sampling.hpp  sky.cpp  trace.hpp  world.hpp
tools/: map2octree.cpp  sample_sky.cpp  simple_path_trace.cpp  voxel.cpp
util/: common.c  common.h  sampling.c  sampling.h  vector.c  vector.h
